rke2/chem/jupyter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter
  namespace: chem
  labels:
    app: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      nodeSelector:
        kubernetes.io/hostname: microedge
      containers:
        - name: jupyter
          image: jupyter/scipy-notebook:latest
          ports:
            - containerPort: 8888
              protocol: TCP
          resources:
            requests:
              cpu: "2"
              memory: 4Gi
            limits:
              cpu: "2"
              memory: 8Gi
          volumeMounts:
            - name: jupyter-data
              mountPath: /home/jovyan/work
      volumes:
        - name: jupyter-data
          persistentVolumeClaim:
            claimName: jupyter-pvc
