rke2/chem/jupyter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-service
  namespace: chem
spec:
  selector:
    app: jupyter
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
