rke2/chem/docking-controller-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docking-controller
  namespace: chem
  annotations:
    cert-manager.io/cluster-issuer: cf-issuer
    cloudflare-operator.io/content: docking-controller.hwcopeland.net
    cloudflare-operator.io/proxied: "true"
    cloudflare-operator.io/type: CNAME
spec:
  hostnames:
    - docking-controller.hwcopeland.net
  parentRefs:
    - name: hwcopeland-gateway
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: docking-controller
          port: 80
