rke2/chem/jupyter-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jupyter
  namespace: chem
  annotations:
    cert-manager.io/cluster-issuer: cf-issuer
    cloudflare-operator.io/content: jupyter.hwcopeland.net
    cloudflare-operator.io/proxied: "true"
    cloudflare-operator.io/type: CNAME
spec:
  hostnames:
    - jupyter.hwcopeland.net
  parentRefs:
    - name: hwcopeland-gateway
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: jupyter-service
          port: 8888
