rke2/chem/khemia-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: khemia-api
  namespace: chem
  annotations:
    cert-manager.io/cluster-issuer: cf-issuer
spec:
  hostnames:
    - khemia.hwcopeland.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: hwcopeland-gateway
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: docking-controller
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
